deployment/kustomization/production/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - 'api.xxx.io'
      tls:
        httpsRedirect: true
    - port:
          number: 443
          name: https
          protocol: HTTPS
      hosts:
        - 'api.xxx.io'
      tls:
        mode: SIMPLE
        credentialName: cluster-gateway
